--- a/becky.css
+++ b/becky.css
@@ -10,7 +10,7 @@ header {
   text-align: center;
   font-weight: 500;
   font-size: 40px;
-  color: red;
+  color: violet;
   font-family: Arial Black;
   border: 4px solid #A00;
 }
