--- a/becky.css
+++ b/becky.css
@@ -10,7 +10,7 @@ header {
   text-align: center;
   font-weight: 500;
   font-size: 40px;
-  color: violet;
+  color: red;
   font-family: Arial Black;
   border: 4px solid #A00;
 }
@@ -25,12 +25,18 @@ h1 {
 
 .bigbeck {
   font-family: Arial;
-  color: red;
+  font-size: 24px;
+  color: orange;
   text-align: left;
-  border: 1px solid #000
+  border: 1px solid #000;
 }
-
-img {
-  width: 75px
-  height: 50px
+.beckv {width: 100px;
+  height: auto;
+  overflow: hidden;
+  }
+.beckh {
+  height: 100px;
+  width: auto;
+  overflow: hidden;
+  
 }
