--- a/becky.css
+++ b/becky.css
@@ -18,7 +18,7 @@ header {
 h1 {
   text-align: center;
   font-weight: 500;
-  font-family: Comic Sans MS;
+  font-family: vivaldi;
   color: blue;
   font-size: 150px
 }
@@ -27,16 +27,23 @@ h1 {
   font-family: Arial;
   font-size: 24px;
   color: orange;
-  text-align: left;
+  text-align: center;
   border: 1px solid #000;
 }
-.beckv {width: 100px;
+.beckv {width: 200px;
   height: auto;
   overflow: hidden;
   }
 .beckh {
-  height: 100px;
+  height: 200px;
   width: auto;
   overflow: hidden;
   
 }
+div {background-color: red;
+width: 100px;
+height: 50px;
+color: white;
+}
+
+
