--- a/becky.css
+++ b/becky.css
@@ -22,6 +22,11 @@ h1 {
   color: blue;
   font-size: 150px
 }
+h2 {text-align: center;
+  font-weight: 500;
+  font-family: vivaldi;
+  color: blue;
+  font-size: 100px}
 
 .bigbeck {
   font-family: Arial;
@@ -40,10 +45,19 @@ h1 {
   overflow: hidden;
   
 }
+h3 {text-align: center;
+background-color: red}
+
 div {background-color: red;
 width: 100px;
 height: 50px;
 color: white;
+text-align: center;
+font-size: 35px;
+font-family: Comic Sans MS;
+display: block;
+margin-left: auto;
+margin-right: auto;
+border: 20px solid black;
 }
-
-
+a {text-decoration: none;}
