--- a/becky.css
+++ b/becky.css
@@ -60,5 +60,6 @@ margin-left: auto;
 margin-right: auto;
 border: 20px solid black;
 }
-a {text-decoration: none;}
+a {text-decoration: none;
+hover: #00ffff}
 
