--- a/becky.css
+++ b/becky.css
@@ -20,13 +20,15 @@ h1 {
   font-weight: 500;
   font-family: vivaldi;
   color: blue;
-  font-size: 150px
+  font-size: 150px;
+  text-shadow: 2px 2px #ff0000;
 }
 h2 {text-align: center;
   font-weight: 500;
   font-family: vivaldi;
   color: blue;
-  font-size: 100px}
+  font-size: 100px;
+ text-shadow: 2px 2px #ff0000;}
 
 .bigbeck {
   font-family: Arial;
