--- a/becky.css
+++ b/becky.css
@@ -62,6 +62,7 @@ margin-left: auto;
 margin-right: auto;
 border: 20px solid black;
 }
-a {text-decoration: none;
-hover: #00ffff}
+a {text-decoration: none;}
+a:hover { background-color: #FF000;
+}
 
