--- a/becky.css
+++ b/becky.css
@@ -63,6 +63,9 @@ margin-left: auto;
 margin-right: auto;
 border: 20px solid black;
 }
+
+div hover { background-color: #FF000;
+}
 a {text-decoration: none;}
 a:hover { background-color: #FF000;
 }
