--- a/becky.css
+++ b/becky.css
@@ -68,3 +68,7 @@ border: 20px solid black;
 a {text-decoration: none;}
 
 .bear {border-radius: 30%}
+
+.grizzly {background-color: 	#00FFFF;
+color: black;
+border-color: OldLace}
